--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,6 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<gwt.version>2.8.0-SNAPSHOT</gwt.version>
-		<!-- <gwt.version>2.7.0</gwt.version> -->
 		<webappDirectory>${project.build.directory}/${project.artifactId}</webappDirectory>
 	</properties>
 
@@ -31,10 +30,6 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		<!-- <dependency> -->
-		<!-- <groupId>com.google.gwt</groupId> -->
-		<!-- <artifactId>gwt-codeserver</artifactId> -->
-		<!-- </dependency> -->
 		<dependency>
 			<groupId>com.google.gwt</groupId>
 			<artifactId>gwt-elemental</artifactId>
@@ -75,7 +70,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>gwt-maven-plugin</artifactId>
-				<version>${gwt.version}</version>
+				<version>2.7.0</version>
 				<executions>
 					<execution>
 						<goals>
@@ -84,7 +79,7 @@
 					</execution>
 				</executions>
 				<configuration>
-					<jsInteropMode>JS</jsInteropMode>
+					<jsInteropMode>JS_RC</jsInteropMode>
 					<style>DETAILED</style>
 					<hostedWebapp>${webappDirectory}</hostedWebapp>
 					<webappDirectory>${webappDirectory}</webappDirectory>
